# setup-a-keyring-for-sops

./: .mergify.yml  .versio.yaml  Cargo.toml  LICENSE.md  Makefile  README.md
.github/: dependabot.yml  renovate.json
.github/workflows/: build-releases.yml  release.yml  test-and-tag.yml  test.yml  tests.yml  update-tap.yml
homebrew/: formula.rb.j2
src/: main.rs
