[package]
name = "setup-a-keyring-for-sops"
version = "0.6.0"
authors = ["Billie Thompson <billie+setup-a-keyring-for-sops@billiecodes.com>"]
edition = "2018"
description = "Create a key for use with SOPS in gcloud."
license = "Creative Commons Zero v1.0 Universal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-error = "0.2.1"
clap = "~2.33"
